Revert changes to `HasConstructorCall`